--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,11 @@
   to { transform: rotate(360deg); }
 }
 
-svg {
-  text-align: center;
+.App #map {
+  /*text-align: right;*/
 }
+
+
+/*.App #route-selector-container {
+  text-align: left;
+}*/
