--- a/src/uiComponents/selectors/routeSelector.css
+++ b/src/uiComponents/selectors/routeSelector.css
@@ -16,3 +16,16 @@
 .App #route-selector-container #route-selector h4 {
   margin: 4px;
 }
+
+.App .route-choice {
+  display: flex;
+  vertical-align: middle;
+}
+
+.App .route-choice .color-indicator {
+  border-radius: 100%;
+  height: 7px;
+  width: 7px;
+  margin-left: 6px;
+  margin-right: 6px;
+}
